fixed float and spacing on services.js

--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -148,7 +148,7 @@ iframe {
   }
 }
 
-@media only screen and (max-width: 850px) {
+@media only screen and (max-width: 769px) {
   .about-wrapper {
     top: 15%;
     max-height: 75vh;
